force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Total_Lien_Placed__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Total_Lien_Placed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of all the Liens placed on that collateral</description>
    <label>Total Lien Placed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>