force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Township__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Township__c</fullName>
    <label>Township</label>
    <length>150</length>
    <type>Text</type>
</CustomField>