force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Trade_In__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Trade_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to know whether trade is in</description>
    <label>Trade In</label>
    <type>Checkbox</type>
</CustomField>