force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Trade_In_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Trade_In_Amount_Owed__c</fullName>
    <description>This field captures the amount owed in the trade.</description>
    <label>Trade in Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>