force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Trade_In_Value__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Trade_In_Value__c</fullName>
    <description>It captures the Value of the trade in.</description>
    <label>Trade in Value (Deprecated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>