force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Trade_Value__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Trade_Value__c</fullName>
    <description>It captures the Value of the trade in.</description>
    <label>Trade in Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>