force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Trailer_Body_Style__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Trailer_Body_Style__c</fullName>
    <description>To capture the Body style of the Trailer.</description>
    <label>Trailer Body/Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufactured</fullName>
            </value>
            <value>
                <fullName>Homemade</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>