force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__UCC_Financing_Statement__c.field-meta.xml
<CustomField>
    <fullName>clcommon__UCC_Financing_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Financing Statement</label>
    <type>Checkbox</type>
</CustomField>