force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__US_Territory__c.field-meta.xml
<CustomField>
    <fullName>clcommon__US_Territory__c</fullName>
    <description>This field is to be added to capture the US Territory.</description>
    <inlineHelpText>This field is to be added to capture the US Territory.</inlineHelpText>
    <label>US Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>