force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Value_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Value_Date__c</fullName>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>