force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Value_Source__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Value_Source__c</fullName>
    <label>Value Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>