force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>