force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Vehicle_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Vehicle_Identification_Number__c</fullName>
    <label>Vehicle Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>