force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Vehicle_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Vehicle_Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>