force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Vehicle_Type__c</fullName>
    <description>A picklist to check whether the vehicle is new or used.</description>
    <label>New/Used Vehicles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new vehicles</fullName>
            </value>
            <value>
                <fullName>used vehicles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>