force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Vessel_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Vessel_Type__c</fullName>
    <description>To capture the vessel type</description>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Power Boat</fullName>
            </value>
            <value>
                <fullName>Sail Boat</fullName>
            </value>
            <value>
                <fullName>Personal Watercraft</fullName>
            </value>
            <value>
                <fullName>Outboard Motor</fullName>
            </value>
            <value>
                <fullName>Boat Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>