force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Warehouse_Depreciation_Setup__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Warehouse_Depreciation_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depreciation Method</label>
    <referenceTo>clcommon__Warehouse_Depreciation_Setup__c</referenceTo>
    <relationshipLabel>Depreciation Setup</relationshipLabel>
    <relationshipName>Depreciation_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>