force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Weight_in_Lbs__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Weight_in_Lbs__c</fullName>
    <description>To capture the weight in Lbs</description>
    <label>Weight in Lbs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>