force-app/main/default/objects/clcommon__Collateral__c/fields/Commercial_Type__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Type__c</fullName>
    <label>Commercial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block of Units or Flats</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Multiple Dwelling Development</fullName>
            </value>
            <value>
                <fullName>Non Specialised Commercial</fullName>
            </value>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Professional Chambers</fullName>
            </value>
            <value>
                <fullName>Residential Commercial</fullName>
            </value>
            <value>
                <fullName>Retirement Village</fullName>
            </value>
            <value>
                <fullName>Retail Shop</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>