force-app/main/default/objects/clcommon__Collateral__c/fields/Comparable_Sales_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Sales_Commentary__c</fullName>
    <label>Comparable Sales Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>