force-app/main/default/objects/clcommon__Collateral__c/fields/Comparable_Sales_Commentary_Present__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Sales_Commentary_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comparable Sales Commentary Present</label>
    <type>Checkbox</type>
</CustomField>