force-app/main/default/objects/clcommon__Collateral__c/fields/Comparable_Sales_Evident__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Sales_Evident__c</fullName>
    <label>Comparable Sales Evident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>