force-app/main/default/objects/clcommon__Collateral__c/fields/Comparable_Sales_Evident_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Sales_Evident_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Valuation_Received__c, &apos;Yes&apos;), AND(ISPICKVAL(Comparable_Sales_Evident__c, &apos;No&apos;), Comparable_Sales_Commentary_Present__c == FALSE), FALSE)</formula>
    <label>Comparable Sales Evident Warning Check</label>
    <type>Checkbox</type>
</CustomField>