force-app/main/default/objects/clcommon__Collateral__c/fields/Construction_Details_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Construction_Details_Total_Amount__c</fullName>
    <label>Construction Details Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>