force-app/main/default/objects/clcommon__Collateral__c/fields/Construction_Section_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>Construction_Section_Render_Check__c</fullName>
    <formula>ISPICKVAL(Construction__c, &apos;Yes&apos;)</formula>
    <label>Construction Section Render Check</label>
    <type>Checkbox</type>
</CustomField>