force-app/main/default/objects/clcommon__Collateral__c/fields/Contract_Of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Contract_Of_Sale__c</fullName>
    <label>Contract Of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>