force-app/main/default/objects/clcommon__Collateral__c/fields/Contract_Of_Sale_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Contract_Of_Sale_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Transaction__c, &apos;Purchase&apos;), OR(ISPICKVAL(Contract_Of_Sale__c, &apos;No&apos;),ISPICKVAL(Contract_Of_Sale__c, &apos;&apos;)), FALSE)</formula>
    <label>Contract Of Sale Warning Check</label>
    <type>Checkbox</type>
</CustomField>