force-app/main/default/objects/clcommon__Collateral__c/fields/Contract_Party__c.field-meta.xml
<CustomField>
    <fullName>Contract_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Party</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collaterals (Contract Party)</relationshipLabel>
    <relationshipName>Collaterals1</relationshipName>
    <type>Lookup</type>
</CustomField>