force-app/main/default/objects/clcommon__Collateral__c/fields/Contract_Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Amount__c</fullName>
    <label>Contract Price Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>