force-app/main/default/objects/clcommon__Collateral__c/fields/Copy_Builders_Licence_Held__c.field-meta.xml
<CustomField>
    <fullName>Copy_Builders_Licence_Held__c</fullName>
    <label>Copy Builders Licence Held</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>