force-app/main/default/objects/clcommon__Collateral__c/fields/Copy_Home_Owners_Warranty_Certificate_He__c.field-meta.xml
<CustomField>
    <fullName>Copy_Home_Owners_Warranty_Certificate_He__c</fullName>
    <label>Copy Home Owners Warranty Certificate He</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>