force-app/main/default/objects/clcommon__Collateral__c/fields/Council_Approval_Held__c.field-meta.xml
<CustomField>
    <fullName>Council_Approval_Held__c</fullName>
    <label>Council Approval Held</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>