force-app/main/default/objects/clcommon__Collateral__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <label>Deposit Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>