force-app/main/default/objects/clcommon__Collateral__c/fields/Deposit_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid_Amount__c</fullName>
    <label>Deposit Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>