force-app/main/default/objects/clcommon__Collateral__c/fields/Detailed_Costings_Held__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Costings_Held__c</fullName>
    <label>Detailed Costings Held</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>