force-app/main/default/objects/clcommon__Collateral__c/fields/Distressed_Asset__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Asset__c</fullName>
    <label>Distressed Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>