force-app/main/default/objects/clcommon__Collateral__c/fields/Distressed_Asset_Render__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Asset_Render__c</fullName>
    <description>Distressed Asset Render</description>
    <formula>IF(OR(ISPICKVAL(Arms_Length_Transaction__c,&apos;No&apos;),ISPICKVAL(Arms_Length_Transaction__c,&apos;&apos;)),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distressed Asset Render</label>
    <type>Text</type>
</CustomField>