force-app/main/default/objects/clcommon__Collateral__c/fields/Distressed_Asset_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Asset_Rule_Check__c</fullName>
    <formula>IF(ISPICKVAL(Distressed_Asset__c,&apos;No&apos;),&apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distressed Asset Rule Check</label>
    <type>Text</type>
</CustomField>