force-app/main/default/objects/clcommon__Collateral__c/fields/Document_Enquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Enquiry_Id__c</fullName>
    <label>Document Enquiry Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>