force-app/main/default/objects/clcommon__Collateral__c/fields/Document_Retrived__c.field-meta.xml
<CustomField>
    <fullName>Document_Retrived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Retrived</label>
    <type>Checkbox</type>
</CustomField>