force-app/main/default/objects/clcommon__Collateral__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>READY</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>FAILURE</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>