force-app/main/default/objects/clcommon__Collateral__c/fields/Duplicate_State_Name__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_State_Name__c</fullName>
    <label>Duplicate State Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>