force-app/main/default/objects/clcommon__Collateral__c/fields/Duplicate_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Street_Type__c</fullName>
    <label>Duplicate Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>