force-app/main/default/objects/clcommon__Collateral__c/fields/Enter_Address_Manually__c.field-meta.xml
<CustomField>
    <fullName>Enter_Address_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enter Address Manually</label>
    <type>Checkbox</type>
</CustomField>