force-app/main/default/objects/clcommon__Collateral__c/fields/Favorable_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Favorable_Purchase__c</fullName>
    <label>Favorable Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>