force-app/main/default/objects/clcommon__Collateral__c/fields/Favorable_Purchase_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Favorable_Purchase_Commentary__c</fullName>
    <label>Favorable Purchase Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>