force-app/main/default/objects/clcommon__Collateral__c/fields/Fixed_Price_Contract__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Contract__c</fullName>
    <label>Fixed Price Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>