force-app/main/default/objects/clcommon__Collateral__c/fields/Floor_Area__c.field-meta.xml
<CustomField>
    <fullName>Floor_Area__c</fullName>
    <label>Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>