force-app/main/default/objects/clcommon__Collateral__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>