force-app/main/default/objects/clcommon__Collateral__c/fields/genesis__Equipment_Master__c.field-meta.xml
<CustomField>
    <fullName>genesis__Equipment_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to equipment master</description>
    <label>Equipment Master</label>
    <referenceTo>genesis__Equipment_Master__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>