force-app/main/default/objects/clcommon__Collateral__c/fields/genesis__Primary__c.field-meta.xml
<CustomField>
    <fullName>genesis__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>