force-app/main/default/objects/clcommon__Collateral__c/fields/Home_Insurance_Certificate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Insurance_Certificate_Expiry_Date__c</fullName>
    <label>Home Insurance Certificate Expiry Date</label>
    <type>Date</type>
</CustomField>