force-app/main/default/objects/clcommon__Collateral__c/fields/Home_Insurance_Certificate_Provided__c.field-meta.xml
<CustomField>
    <fullName>Home_Insurance_Certificate_Provided__c</fullName>
    <label>Home Insurance Certificate Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>