force-app/main/default/objects/clcommon__Collateral__c/fields/Industrial_Type__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Type__c</fullName>
    <label>Industrial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light Industrial</fullName>
            </value>
            <value>
                <fullName>Non Specialised Industrial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>