force-app/main/default/objects/clcommon__Collateral__c/fields/Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Name__c</fullName>
    <label>Insurer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>