force-app/main/default/objects/clcommon__Collateral__c/fields/Interested_Party__c.field-meta.xml
<CustomField>
    <fullName>Interested_Party__c</fullName>
    <label>Interested Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>