force-app/main/default/objects/clcommon__Collateral__c/fields/Is_Purchaser_the_Mortgagor__c.field-meta.xml
<CustomField>
    <fullName>Is_Purchaser_the_Mortgagor__c</fullName>
    <label>Is Purchaser the Mortgagor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>