force-app/main/default/objects/clcommon__Collateral__c/fields/Is_Purchaser_the_Mortgagor_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Is_Purchaser_the_Mortgagor_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Contract_Of_Sale__c, &apos;Yes&apos;), OR(ISPICKVAL( Is_Purchaser_the_Mortgagor__c, &apos;No&apos;), ISPICKVAL( Is_Purchaser_the_Mortgagor__c, &apos;&apos;)), FALSE)</formula>
    <label>Is Purchaser the Mortgagor Warning Check</label>
    <type>Checkbox</type>
</CustomField>