force-app/main/default/objects/clcommon__Collateral__c/fields/Land_Area_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Land_Area_Warning_Check__c</fullName>
    <formula>OR(IF(ISPICKVAL(Land_Area_Units__c, &apos;Acres&apos;), OR(Land_Area__c &gt; 5, ISBLANK(Land_Area__c)), FALSE), IF(ISPICKVAL(Land_Area_Units__c, &apos;Hectares&apos;), OR(Land_Area__c &gt; 2.02, ISBLANK(Land_Area__c)), FALSE), IF(ISPICKVAL(Land_Area_Units__c, &apos;Square Metres&apos;), OR(Land_Area__c &gt; 20234.3, ISBLANK(Land_Area__c)), FALSE))</formula>
    <label>Land Area Warning Check</label>
    <type>Checkbox</type>
</CustomField>