force-app/main/default/objects/clcommon__Collateral__c/fields/Land_Value__c.field-meta.xml
<CustomField>
    <fullName>Land_Value__c</fullName>
    <label>Land Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>