force-app/main/default/objects/clcommon__Collateral__c/fields/Land_Value_Basis__c.field-meta.xml
<CustomField>
    <fullName>Land_Value_Basis__c</fullName>
    <label>Land Value Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated Market Value</fullName>
            </value>
            <value>
                <fullName>Purchase Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>