force-app/main/default/objects/clcommon__Collateral__c/fields/Licenced_Builder__c.field-meta.xml
<CustomField>
    <fullName>Licenced_Builder__c</fullName>
    <label>Licenced Builder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>