force-app/main/default/objects/clcommon__Collateral__c/fields/Licenced_Builder_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Licenced_Builder_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Construction__c, &apos;Yes&apos;), OR(ISPICKVAL(Licenced_Builder__c, &apos;No&apos;), ISPICKVAL(Licenced_Builder__c, &apos;&apos;)), FALSE)</formula>
    <label>Licenced Builder Warning Check</label>
    <type>Checkbox</type>
</CustomField>