force-app/main/default/objects/clcommon__Collateral__c/fields/Licenced_REA_Contract_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Licenced_REA_Contract_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Transaction__c, &apos;Purchase&apos;), IF(ISPICKVAL(Contract_Of_Sale__c, &apos;Yes&apos;), OR(ISPICKVAL(Licenced_Real_Estate_Agent_Contract__c, &apos;No&apos;), ISPICKVAL(Licenced_Real_Estate_Agent_Contract__c, &apos;&apos;)), FALSE), FALSE)</formula>
    <label>Licenced REA Contract Warning Check</label>
    <type>Checkbox</type>
</CustomField>