force-app/main/default/objects/clcommon__Collateral__c/fields/Licenced_Real_Estate_Agent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Licenced_Real_Estate_Agent_Contract__c</fullName>
    <label>Licenced Real Estate Agent Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>