force-app/main/default/objects/clcommon__Collateral__c/fields/Loan_Assesment_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Loan_Assesment_Commentary__c</fullName>
    <label>Loan Assesment Commentary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>