force-app/main/default/objects/clcommon__Collateral__c/fields/Longer_than_12Month_Completion_Explanati__c.field-meta.xml
<CustomField>
    <fullName>Longer_than_12Month_Completion_Explanati__c</fullName>
    <label>Longer than 12Month Completion Explanati</label>
    <length>255</length>
    <type>Text</type>
</CustomField>