force-app/main/default/objects/clcommon__Collateral__c/fields/Manual_Title_Search_Required__c.field-meta.xml
<CustomField>
    <fullName>Manual_Title_Search_Required__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Manual Title Search Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>