force-app/main/default/objects/clcommon__Collateral__c/fields/Mortgagor__c.field-meta.xml
<CustomField>
    <fullName>Mortgagor__c</fullName>
    <label>Mortgagor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>