force-app/main/default/objects/clcommon__Collateral__c/fields/NRAS_Property__c.field-meta.xml
<CustomField>
    <fullName>NRAS_Property__c</fullName>
    <label>NRAS Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>