force-app/main/default/objects/clcommon__Collateral__c/fields/Ordered_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Upfront__c</fullName>
    <label>Ordered Upfront</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>