force-app/main/default/objects/clcommon__Collateral__c/fields/Price_Confirmed_and_Title_Searched__c.field-meta.xml
<CustomField>
    <fullName>Price_Confirmed_and_Title_Searched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Confirmed and Title Searched</label>
    <type>Checkbox</type>
</CustomField>